--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "nette/nette": ">=2.0.0"
+        "nette/nette": "^2.4"
     },
     "autoload": {
         "psr-4": {
