--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "nette/nette": "^2.4"
+        "nette/nette": "^2.4 || ^3.0"
     },
     "autoload": {
         "psr-4": {
