--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     ],
 	"require": {
 		"php": ">= 7.1",
-		"ext-iconv": "*",
-		"ext-mbstring": "*",
 		"nette/application": "^3.0",
 		"nette/http": "^3.0",
-		"nette/utils": "^3.1"
+		"nette/utils": "^3.1",
+		"ext-iconv": "*",
+		"ext-mbstring": "*"
 	},
     "autoload": {
         "psr-4": {
