*fix - mb_strlen vs strlen in http response *edit - composer extensions, phpdoc

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
 		"php": ">= 7.1",
 		"nette/application": "^2.4",
 		"nette/http": "^2.4",
-		"nette/utils": "^2.4"
+		"nette/utils": "^2.4",
+		"ext-iconv": "*",
+		"ext-mbstring": "*"
 	},
     "autoload": {
         "psr-4": {
