--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,18 @@
     ],
 	"require": {
 		"php": ">= 7.1",
-		"nette/application": "^3.0",
-		"nette/http": "^3.0",
-		"nette/utils": "^3.1",
 		"ext-iconv": "*",
-		"ext-mbstring": "*"
+		"ext-mbstring": "*",
+		"nette/application": "^2.4|^3.0",
+		"nette/http": "^2.4|^3.0",
+		"nette/utils": "^2.4|^3.1"
 	},
     "autoload": {
         "psr-4": {
             "XSuchy09\\Application\\Responses\\": "src/"
         }
-    }
+    },
+	"config": {
+		"sort-packages": true
+	}
 }
