--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
 		"php": ">= 7.1",
 		"ext-iconv": "*",
 		"ext-mbstring": "*",
-		"nette/application": "^2.4|^3.0",
-		"nette/http": "^2.4|^3.0",
-		"nette/utils": "^2.4|^3.1"
+		"nette/application": "^2.4|^3.0|^3.1|^3.2",
+		"nette/http": "^2.4|^3.0|^3.1|^3.2|^3.3",
+		"nette/utils": "^2.4|^3.1|^4.0"
 	},
     "autoload": {
         "psr-4": {
